runner profile added

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
 .promo {
 	width: 1600px;
 	height: 400px;
-	background-image: url("../resources/green-background.png");
+	background-image: url("../resources/bg.jpg");
 }
 
 .my-jumbotron {
