--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* Copied from React.js website */
 
 .my-container {
@@ -65,7 +64,7 @@
 
 .runner-table-div {
 	height: 500px;
-    overflow: scroll;
+	overflow: scroll;
 }
 
 .page-title-bar {
@@ -128,9 +127,9 @@
 
 .my-jumbotron p {
 	margin-bottom: 15px;
-  	font-size: 21px;
-  	font-weight: 200;
-  	font-family: 'Roboto', sans-serif;
+	font-size: 21px;
+	font-weight: 200;
+	font-family: 'Roboto', sans-serif;
 }
 
 /* Form style */
@@ -152,6 +151,15 @@
 	padding-bottom: 100px;
 }
 
+.left-align-container {
+	padding-top: 75px;
+	padding-left: 20px;
+	padding-right: 20px;
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .form-field-sizes {
 	width: 300px;
 	margin-bottom: 5px;
@@ -160,7 +168,7 @@
 /*.create-team-header {
 	font-family: 'Roboto', sans-serif;
 	text-align: center;
-}*/
+	}*/
 
 
 
