api mods - race summary added

--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,10 @@
 }
 
 .promo {
-	width: 1600px;
+	width: 100%;
 	height: 400px;
-	background-image: url("../resources/bg.jpg");
+	/*background-image: url("../resources/bg.jpg");*/
+	background-color: black;
 }
 
 .my-jumbotron {
