--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,16 @@
 	margin-right: auto;
 }
 
+.medium-table {
+	height: 160px;
+	width: 500px;
+	overflow: auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
+
 .show-grid p {
 	margin-bottom: 0px;
 }
