--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,13 @@
 	margin-right: auto;
 }
 
+#login-box {
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30%;
+}
+
 
 
 /*.create-team-header {
