--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,14 @@
 }
 
 #login-box {
-	width: 300px;
+	width: 350px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30%;
+}
+
+#register-box {
+	width: 350px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 30%;
